# cel-python

./: .bazelrc  BUILD  MODULE.bazel  README.md  py_cel.cc  py_cel.h  py_cel_activation.cc  py_cel_activation.h  py_cel_arena.cc  py_cel_arena.h  py_cel_env.cc  py_cel_env.h  py_cel_env_internal.cc  py_cel_env_internal.h  py_cel_expression.cc  py_cel_expression.h  py_cel_extension.h  py_cel_function.cc  py_cel_function.h  py_cel_function_decl.cc  py_cel_function_decl.h  py_cel_module.cc  py_cel_overload.cc  py_cel_overload.h  py_cel_python_extension.cc  py_cel_python_extension.h  py_cel_test.py  py_cel_type.cc  py_cel_type.h  py_cel_value.cc  py_cel_value.h  py_cel_value_provider.h  py_descriptor_database.cc  py_descriptor_database.h  py_error_status.cc  py_error_status.h  py_message_factory.cc
.github/workflows/: workflow.yaml
cel_expr_python/: BUILD  cel.pyi  cel_env_test.py  cel_extension.h  cel_test.py  py_cel_activation.cc  py_cel_activation.h  py_cel_arena.cc  py_cel_env.cc  py_cel_env.h  py_cel_env_config.cc  py_cel_env_config.h  py_cel_env_internal.cc  py_cel_env_internal.h  py_cel_expression.cc  py_cel_expression.h  py_cel_function.cc  py_cel_function.h  py_cel_function_decl.cc  py_cel_function_decl.h  py_cel_module.cc  py_cel_overload.cc  py_cel_overload.h  py_cel_python_extension.cc  py_cel_python_extension.h  py_cel_type.cc  py_cel_type.h  py_cel_value.cc  py_cel_value.h  py_cel_value_provider.h  py_descriptor_database.cc  py_descriptor_database.h  py_error_status.cc  py_error_status.h  py_message_factory.cc
cel_expr_python/ext/: BUILD  ext_bindings.cc  ext_bindings.pyi  ext_encoders.cc  ext_encoders.pyi  ext_math.cc  ext_math.pyi  ext_optional.cc  ext_optional.pyi  ext_proto.cc  ext_proto.pyi  ext_string.cc  ext_strings.cc  ext_strings.pyi
codelab/: codelab.py  index.lab.md
codelab/solution/: codelab.py
conformance/: BUILD  conformance_test.py
custom_ext/: BUILD  custom_ext_test.py  sample_cel_ext.cc  sample_cel_ext.py  sample_cel_ext_cc.pyi
ext/: BUILD  BUILD.orig  ext_bindings.cc  ext_encoders.cc  ext_math.cc  ext_optional.cc  ext_proto.cc  ext_string.cc
py_cel/: BUILD  cel_extension.h  py_cel_activation.cc  py_cel_activation.h  py_cel_arena.cc  py_cel_env.cc  py_cel_env.h  py_cel_env_internal.cc  py_cel_env_internal.h  py_cel_expression.cc  py_cel_expression.h  py_cel_function.cc  py_cel_function.h  py_cel_function_decl.cc  py_cel_function_decl.h  py_cel_module.cc  py_cel_overload.cc  py_cel_overload.h  py_cel_python_extension.cc  py_cel_python_extension.h  py_cel_test.py  py_cel_type.cc  py_cel_type.h  py_cel_value.cc  py_cel_value.h  py_cel_value_provider.h  py_descriptor_database.cc  py_error_status.cc  py_error_status.h  py_message_factory.cc  py_message_factory.h  status_macros.h
py_cel/ext/: BUILD  ext_bindings.cc  ext_encoders.cc  ext_math.cc  ext_optional.cc  ext_proto.cc  ext_string.cc
release/: README.md  build_wheel.sh  cel_basic_test.py  py_cel_basic_test.py  pyproject.toml  setup.py
testing/: BUILD.bazel
