module(
    name = "cel-python",
)

# https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")

# https://registry.bazel.build/modules/abseil-py
bazel_dep(name = "abseil-py", version = "2.1.0", repo_name = "com_google_absl_py")

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# https://registry.bazel.build/modules/cel-cpp
bazel_dep(name = "cel-cpp", version = "0.14.0", repo_name = "com_google_cel_cpp")

# 04/01/2026
_CEL_CPP_COMMIT = "5a3463337cf2a9b90b53833af2bbc1f35da90d64"

_CEL_CPP_SHA256 = "299be398d1495340eb92da31f9a0667e1351479752e8a567ac31c385e4aea73c"

archive_override(
    module_name = "cel-cpp",
    sha256 = _CEL_CPP_SHA256,
    strip_prefix = "cel-cpp-" + _CEL_CPP_COMMIT,
    url = "https://github.com/google/cel-cpp/archive/" + _CEL_CPP_COMMIT + ".tar.gz",
)

# https://registry.bazel.build/modules/cel-spec
bazel_dep(name = "cel-spec", version = "0.25.1", repo_name = "com_google_cel_spec")

# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")

# https://registry.bazel.build/modules/platforms
bazel_dep(name = "platforms", version = "1.0.0")

# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")

# https://registry.bazel.build/modules/pybind11_abseil
bazel_dep(name = "pybind11_abseil", version = "202402.0")

# https://registry.bazel.build/modules/pybind11_bazel
bazel_dep(name = "pybind11_bazel", version = "3.0.0")

# https://registry.bazel.build/modules/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.14")

# https://registry.bazel.build/modules/rules_proto
bazel_dep(name = "rules_proto", version = "7.1.0")

# https://registry.bazel.build/modules/rules_python
bazel_dep(name = "rules_python", version = "1.7.0")

python_rules = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_rules.toolchain(
    is_default = True,
    python_version = "3.11",
)
