# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cel-expr-python"
# $VERSION is replaced with the desired version in build_wheel.sh.
version = "$VERSION"
description = "The CEL Python runtime"
requires-python = ">=3.11"
classifiers = [
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["wheelhouse*", "conformance*", "custom_ext*"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*musllinux*"
test-command = "python {project}/cel_basic_test.py"

[tool.cibuildwheel.linux]
before-all = "echo 'Installing bazelisk'; curl -LO https://github.com/bazelbuild/bazelisk/releases/download/v1.19.0/bazelisk-linux-amd64 && chmod +x bazelisk-linux-amd64 && mv bazelisk-linux-amd64 /usr/local/bin/bazel"
