load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")

py_proto_library(
    name = "proto2_test_all_types_py_pb2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cel_spec//proto/cel/expr/conformance/proto2:test_all_types_proto",
    ],
)

py_proto_library(
    name = "proto3_test_all_types_py_pb2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cel_spec//proto/cel/expr/conformance/proto3:test_all_types_proto",
    ],
)

py_proto_library(
    name = "simple_py_pb2",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cel_spec//proto/cel/expr/conformance/test:simple_proto"],
)
